assets/css/style.css
* {
  box-sizing: border-box;
}
body {
  background-color: #fff;
  font-family: "Source Sans 3", sans-serif;
  margin: 0;
  padding: 0;
}
a {
  text-decoration: none;
}

/* Header & Footer Component CSS as they are having some common styles */
header,
footer {
  background-color: #ccc;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 2rem;
  height: 100px;
}

/* Logo CSS */
.logo {
  color: #fff;
  font-size: calc(48px + (68 - 48) * ((100vw - 1440px) / (2500 - 1440)));
  font-weight: 300;
  line-height: calc(68px + (88 - 68) * ((100vw - 1440px) / (2500 - 1440)));
}

/* Header Navigation CSS */
.navbar {
  display: flex;
  justify-content: space-around;
  align-items: center;
}
.navbar a {
  color: #111;
  display: flex;
  font-size: calc(16px + (22 - 16) * ((100vw - 1440px) / (2500 - 1440)));
  font-weight: 400;
  line-height: calc(22px + (28 - 22) * ((100vw - 1440px) / (2500 - 1440)));
  margin: 1rem;
}
/* Main Component CSS */
main {
  background-color: antiquewhite;
  height: calc(100vh - 200px);
  overflow: hidden;
}
.banner-section {
  position: relative;
  height: calc(100vh - 200px);
}
/* Banner Content CSS */
.banner-content-wrapper {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.4);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 1;
}
picture img {
  max-width: 100%;
  height: 100%;
  width: 100%;
  object-fit: cover;
}
.banner-content-wrapper h1 {
  color: #fff;
  font-size: calc(24px + (30 - 24) * ((100vw - 1440px) / (2500 - 1440)));
  font-weight: 300;
  list-style: calc(36px + (42 - 36) * ((100vw - 1440px) / (2500 - 1440)));
}
/* Click here button CSS */
.banner-content-wrapper .btn {
  background-color: #909090;
  border: 0;
  cursor: pointer;
  display: inline-block;
  padding: 1rem;
  font-size: calc(16px + (22 - 16) * ((100vw - 1440px) / (2500 - 1440)));
  font-weight: 500;
  line-height: calc(22px + (28 - 22) * ((100vw - 1440px) / (2500 - 1440)));
  color: #fff;
  text-align: center;
  text-decoration: none;
  min-width: calc(200px + (280 - 200) * ((100vw - 1440px) / (2500 - 1440)));
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  outline: none;
}
.banner-content-wrapper .btn:hover {
  background-color: #2f55dd;
}
.banner-content-wrapper .btn:focus-visible {
  outline: none;
}
/* Media Query for hiding the navbar */
@media screen and (max-width: 768px) {
  .navbar {
    display: none;
  }
}

